statping/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - status.anrop.se
      - statping.anrop.se
      secretName: statping-tls
  rules:
    - host: statping.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: statping
              port:
                number: 8080
    - host: status.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: statping
              port:
                number: 8080
